--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Volby do Evropského parlamentu
 
 
 
-</div><div class="row-main row-main--article"><section class="ep_election_results_app" data-config='{"state":{"name":"turnout","params":[{"year":2014},{"division":"CZ"},{"view":"map"}]}}'></section><script defer src="http://www.europarl.europa.eu/website/election-results/js/ep_electionresults_app.js"></script></div><div class="row-main row-main--narrow">
+</div><div class="row-main row-main--article"><section class="ep_election_results_app" data-config='{"state":{"name":"turnout","params":[{"year":2014},{"division":"CZ"},{"view":"map"}]}}'></section><script defer src="https://www.europarl.europa.eu/website/election-results/js/ep_electionresults_app.js"></script></div><div class="row-main row-main--narrow">
 
 <h3 id="volby-do-evropsk-ho-parlamentu">Volby do Evropského parlamentu</h3>
 <ul>
