--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <style>li{background:0 0!important;margin:0!important;padding:0!important}ol,ul{list-style:initial!important;font-size:medium!important;line-height:1.5!important}hr{max-width:none!important}#graf2{min-width:310px;max-width:1200px;height:60vh;margin:0 auto}@media only screen and (max-width:880px){#graf2{margin:auto 20px auto 0;float:left}}</style>
 <div class="row-main row-main--article">
 <h1 class="b-data__title b-data__title--sm">
-„I po 15 letech je to pořád nové.“ Účast v eurovolbách klesá, průměr táhnou dolů hlavně Slovensko a Česko
+Zájem o volby do Evropského parlamentu klesá. Průměr dolů dramaticky táhnou Slováci a Češi
 </h1>
 </div>
 <div class="row-main row-main--narrow">
@@ -221,36 +221,49 @@
 
 
 
-<div class="b-inline b-inline--right"><div class="b-inline__wrap"><div class="b-inline__content"><div class="text-sm">
-<h3>Volby 24. a 25. května</h3>
-Ačkoli má Česko jednu z nejnižších účastí, jsme jediná země v Evropské unii, kde jsou volební místnosti otevřené dva dny. Podobně jako v Irsku, na Maltě a na Slovensku u nás také zástupce v Evropském parlamentu není možné volit korespondenčně. 
-</div></div></div></div>
-
 <p>Zatímco v Itálii, Dánsku nebo Irsku se účast v eurovolbách drží nad 50 procenty, na Maltě přišly před pěti lety k volebním urnám dokonce tři čtvrtiny voličů. Speciálním případem jsou pak Belgie a Lucembursko, kde lidé mají účast povinnou ze zákona a kde účast v posledních volbách do europarlamentu dosáhla přes 89, resp. 85 procent. V Belgii je tak volební účast ze všech členských států vůbec nejvyšší.</p>
 <p>Opačný pól žebříčku ovládá Slovensko – k evropským volbám tam v roce 2014 přišlo jen 13 procent lidí. Předposlední místo obsadila s 18 procenty Česká republika, v předchozích volbách v letech 2004 a 2009 přitom volební účast dosáhla ještě 28 procent.</p>
 </div><div class="row-main row-main--article"><div id="graf2"></div></div><div class="row-main row-main--narrow">
 
-<p>„Sešup“ o deset procentních bodů mohla podle sociologa Daniela Prokopa zapříčinit mimo jiné i přesycenost volbami. O rok dříve se totiž v Česku konaly prezidentské i sněmovní volby. Zatímco v nich přišlo k urnám vhodit svůj hlas pět milionů lidí, k eurovolbám jich dorazilo jen půldruhého milionu.</p>
+<p>„Sešup“ o deset procentních bodů mohla podle sociologa Daniela Prokopa zapříčinit mimo jiné i přesycenost volbami. O rok dříve se totiž v Česku konaly prezidentské i sněmovní volby. Zatímco v nich přišlo volit pět milionů lidí, k eurovolbám jich dorazilo jen půldruhého milionu.</p>
 <p>„Bylo to brzy po dvou velice důležitých volbách. Lidé tak už byli saturovaní, naplnili svoji potřebu se politicky vyjádřit,“ popsal Prokop pro iROZHLAS.cz. Letos by podle něj účast mohla být vyšší.</p>
+<h2 id="hluboko-pod-pr-m-rem">Hluboko pod průměrem</h2>
 <p>Podobně jsou na tom s volební účastí ovšem i další nové členské země, které do Evropské unie vstoupily společně s Českem v roce 2004. V drtivé většině z nich se volební účast pohybuje hluboko pod celoevropských průměrem, který byl v roce 2014 na 42,6 procenta. Třeba v Polsku to bylo 24 procent, v Maďarsku 29 procent.</p>
 <p>I tady se ale najdou výjimky – ať jde o již zmíněnou Maltu, nebo Litvu s 47 procenty. Nadprůměrnou účast drží také v Rakousku, které do unie vstoupilo devět let před Českem.</p>
 <p><em>V aplikaci Evropského parlamentu si můžete porovnat účast a výsledky ze dvou posledních eurovoleb z let 2009 a 2014 (starší data nejsou zatím zpracovaná) v jednotlivých členských státech i v celé Evropské unii.</em> </p>
 </div><div class="row-main row-main--article"><section class="ep_election_results_app" data-config='{"state":{"name":"turnout","params":[{"year":2014},{"division":"CZ"},{"view":"map"}]}}'></section><script defer src="https://www.europarl.europa.eu/website/election-results/js/ep_electionresults_app.js"></script></div><div class="row-main row-main--narrow">
 
-<h2 id="22-procent-lid-m-z-jem">22 procent lidí má zájem</h2>
 <p>Změnu trendu nenaznačují ani dosavadní odhady. Podle průzkumu Eurobarometru z loňského září se v Česku určitě chystá volit zástupce do Evropského parlamentu jen 14 procent lidí. K volbám chodí spíše lidé z velkých měst, třeba v Praze byla účast před pěti lety 25 procent.</p>
+<div class="b-inline b-inline--right"><div class="b-inline__wrap"><div class="b-inline__content"><div class="text-sm">
+<h3>Volby 24. a 25. května</h3>
+Ačkoli má Česko jednu z nejnižších účastí, jsme jediná země v Evropské unii, kde jsou volební místnosti otevřené dva dny. Podobně jako v Irsku, na Maltě a na Slovensku u nás také zástupce v Evropském parlamentu není možné volit korespondenčně. 
+</div></div></div></div>
+
 <p>Daniel Prokop ale situaci nevidí tak kriticky: „Odhaduji, že účast bude nakonec mezi 18 a 25 procenty.“</p>
+<h2 id="22-procent-lid-m-z-jem">22 procent lidí má zájem</h2>
 <p>Zájem o volby do struktur Evropské unie pak podle zmíněného průzkumu projevilo pouze 22 procent z oslovených. Evropský průměr je v tomto ohledu přitom násobně vyšší, a to 51 procent.</p>
 <p>Mezi nejdůležitější témata, která by se měla řešit během předvolební kampaně, pak čeští respondenti zařadili přistěhovalectví, ochranu vnějších hranic a boj s terorismem. Politické strany by se tak podle sociologa Prokopa měly zaměřit na konkrétní problematiku, aby přitáhly pozornost voličů.</p>
 <p>„Když si všechny strany dají do kampaně, že budou hájit národní zájmy, tak volič těžko pozná, kdo je hájí nejvíc a co to vlastně znamená. Dominovalo to v minulých volbách, je to ale vágní. Strany by měly bojovat za určitou myšlenku, třeba snížení byrokracie nebo zdanění velkých firem,“ popsal.</p>
-<p>Problémem je podle něj i nízké povědomí, o čem vlastně Evropská parlament rozhoduje. S tím souhlasí také politolog z Univerzity Karlovy Kamil Švec. „Většina lidí v tom má zmatek, volby jsou tak pro ně nezajímavé,“ řekl pro iROZHLAS.cz.</p>
+<p>Problémem je podle něj i nízké povědomí, o čem vlastně Evropský parlament rozhoduje. S tím souhlasí také politolog z Univerzity Karlovy Kamil Švec. „Většina lidí v tom má zmatek, volby jsou tak pro ně nezajímavé,“ řekl pro iROZHLAS.cz.</p>
 <p>Na osvětě by podle něj měli zapracovat především stávající europoslanci. „V české politice nejsou příliš vidět. Jsou tak trochu schizofrenní - musí pracovat v europarlamentu a zároveň vykazovat výsledky doma, aby ukázali smysl své práce. Ne všichni se to ale ještě naučili,“ vysvětlil.</p>
+</div><div class="row-main row-main--article"><figure><img src="https://www.irozhlas.cz/sites/default/files/styles/zpravy_clanek_cely/public/uploader/20171214_ep-063150a__190123-192932_haf.JPG?itok=dPcwJU2n" width="100%" /><figcaption>Sídlo Evropského parlamentu ve Štrasburku | Zdroj: Evropský parlament</figcaption></figure></div><div class="row-main row-main--narrow">
+
 <p>Švec rovněž míní, že za nízkou volební účastí může být i fakt, že eurovolby v tuzemsku zatím proběhly jen třikrát. „Přece jenom od roku 2004, když Česko vstoupilo do Evropské unie, nebylo evropských voleb tolik, voliči to nemají zažité a s volbami se necítí identifikováni. I když je to už 15 let, pořád to jsou nové volby.“</p>
+<p>Není to ale jen o Česku či Slovensku, zájem o volby do Evropského parlamentu klesá napříč unií. Podle Švece to souvisí s proměnou nálad v celé Evropě. S nástupem euroskeptických stran se ovšem ve Francii, Nizozemsku i Velké Británii paradoxně voličská účast mírně zvýšila. Stejně tak v Německu, kde vzrostla mezi lety 2009 a 2014 dokonce o pět procentních bodů.</p>
+<p>„Ve chvíli, kdy se daří Marine Le Penové ve Francii, UKIP v Británii (Strana nezávislosti Spojeného království – pozn. red.) nebo Geertu Wildersovi v Nizozemsku, tak je to spíš zpráva o tom, jak je vnímána Evropská unie, než Evropský parlament. A politické strany toho dokáží dobře využívat,“ doplnil.</p>
+<div class="b-inline b-inline--left"><div class="b-inline__wrap"><div class="b-inline__content"><div class="text-sm">
+<h3>Co se bude dít</h3>
+<p><strong>Březen:</strong> Na plénu Evropského parlamentu má představit svoji vizi budoucí Evropské unie slovenský premiér Peter Pellegrini. Tuto možnost dostal také <a href="https://www.irozhlas.cz/zpravy-domov/stret-zajmu-andrej-babis-agrofert-kampan-brusel_1901310600_tec">český premiér Andrej Babiš (ANO), prestižní výstup v Bruselu ale kvůli řešení střetu zájmů zrušil</a>. Zároveň v březnu začíná oficiálně kampaň do květnových voleb.</p>
+<p><strong>29. březen:</strong> Hodinu před půlnocí má Velká Británie opustit Evropskou unii.</p>
+<p><strong>18. dubna:</strong> Poslední zasedání končícího europarlamentu. V dubnu a květnu proběhnou také debaty lídrů ve volbách.</p>
+<p><strong>23. až 26. květen:</strong> V 27 zemích Evropské unie proběhne volba celkem 705 zástupců v Evropském parlamentu.</p>
+</div></div></div></div>
+
 <h2 id="motiva-n-kampa-">Motivační kampaň</h2>
 <p>Kvůli malému zájmu o eurovolby připravil český Evropský dům motivační kampaň s názvem <a href="https://cesko.tentokratbuduvolit.eu/">Tentokrát budu volit</a>. Cílí především na mladé lidi, jejichž účast byla před pěti lety ještě nižší než celorepublikový průměr. K volebním urnám jich tehdy přišlo jen 16 procent. Iniciativa je společná pro všechny členské země, v Česku se do ní zatím zapojilo přes 2100 lidí.</p>
 <p>„Myslíme si, že je důležité nemluvit k lidem v rámci kampaně pouze prostřednictvím Evropského parlamentu coby instituce Evropské unie, ale chceme, aby lidé mluvili o evropských volbách i mezi sebou,“ prohlásil při rozjezdu kampaně loni v listopadu vedoucí české kanceláře Evropského parlamentu Jiří Kubíček.</p>
-<p>Iniciativa tak sází především na mladé aktivní ambasadory, kteří mají šířit povědomí o Evropské unii ve svém okolí. Dosud proběhlo podle Ireny Kubáskové, tiskové atašé Evropského parlamentu v Česku, kolem dvacítky akcí. V únoru je na programu podle webu zatím trojice akcí, a to v Plzni, Jihlavě a Českých Budějovicích.</p>
-<p>V aplikaci <a href="https://www.what-europe-does-for-me.eu/cs/home">Co dělá Evropa pro mě</a> se unie snaží vysvětlit, jak zlepšuje každodenní život ve všech českých krajích a různým skupinám obyvatel jako jsou milovníci zvířat, vodáci, nebo lidé dojíždějící do zaměstnání.</p>
+<p>Iniciativa tak sází především na mladé aktivní ambasadory, kteří mají šířit povědomí o Evropské unii ve svém okolí. Dosud proběhlo podle Ireny Kubáskové, tiskové atašé Evropského parlamentu v Česku, kolem dvacítky akcí. V únoru je na programu podle webu zatím trojice setkání, a to v Plzni, Jihlavě a Českých Budějovicích.</p>
+<p>Vyzkoušet si také můžete aplikaci <a href="https://www.what-europe-does-for-me.eu/cs/home">Co dělá Evropa pro mě</a>. V ní se unie snaží vysvětlit, jak zlepšuje každodenní život ve všech českých krajích a různým skupinám obyvatel jako jsou milovníci zvířat, vodáci, nebo lidé dojíždějící do zaměstnání.</p>
 
 
 <p class="meta meta--right meta--big">
